--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^10.12.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
