--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "antd": "^5.7.0",
     "framer-motion": "^10.12.22",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.525.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.30.1",
     "recharts": "^2.7.2",
     "vite-plugin-rewrite-all": "^1.0.1"
   },
